k8s/setup-namespace/setup-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: setup-service
  namespace: setup
spec:
  selector:
    app: setup-service
  ports:
  - port: 9002
    targetPort: 9002
    name: http
  type: ClusterIP
